--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,62 +10,62 @@ jobs:
     ## todo later - run deploy.
 
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Cache Composer dependencies
-      uses: actions/cache@v3
-      with:
-        path: /tmp/composer-cache
-        key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
-    
-    - uses: php-actions/composer@v6
-    
-    - uses: php-actions/phpunit@v3
-      with:
-        version: 7.5.20
-        php_version: 7.3
-        bootstrap: tests/bootstrap.php
-        configuration: phpunit.xml
+      - uses: actions/checkout@v3
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: /tmp/composer-cache
+          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+
+      - uses: php-actions/composer@v6
+
+      - uses: php-actions/phpunit@v3
+        with:
+          version: 7.5.20
+          php_version: 7.3
+          bootstrap: tests/bootstrap.php
+          configuration: phpunit.xml
 
   tag:
     name: New release
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    
-    - name: Cache Composer dependencies
-      uses: actions/cache@v3
-      with:
-        path: /tmp/composer-cache
-        key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Install composer
-      uses: php-actions/composer@v6
-      with:
-        php_extensions: json
-        version: 2
-        dev: no
-    - run: composer global config --no-plugins allow-plugins.wpify/scoper true
-    - run: composer global require wpify/scoper
-    - run: sudo chown -R $USER:$USER $GITHUB_WORKSPACE/vendor
-    - run: composer install --no-dev --optimize-autoloader
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: /tmp/composer-cache
+          key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
 
-    - name: WordPress Plugin Deploy
-      id: deploy
-      uses: 10up/action-wordpress-plugin-deploy@stable
-      with:
-        generate-zip: true
-      env:
-        SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
-        SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
-        SLUG: woolab-ic-dic
-    - name: Upload release asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ github.event.release.upload_url }}
-        asset_path: ${{github.workspace}}/woolab-ic-dic.zip
-        asset_name: woolab-ic-dic.zip
-        asset_content_type: application/zip
+      - name: Install composer
+        uses: php-actions/composer@v6
+        with:
+          php_extensions: json
+          version: 2
+          dev: no
+      - run: composer global config --no-plugins allow-plugins.wpify/scoper true
+      - run: composer global require wpify/scoper
+      - run: sudo chown -R $USER:$USER $GITHUB_WORKSPACE/vendor
+      - run: composer install --no-dev --optimize-autoloader
+
+    # - name: WordPress Plugin Deploy
+    #   id: deploy
+    #   uses: 10up/action-wordpress-plugin-deploy@stable
+    #   with:
+    #     generate-zip: true
+    #   env:
+    #     SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
+    #     SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+    #     SLUG: woolab-ic-dic
+    # - name: Upload release asset
+    #   uses: actions/upload-release-asset@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     upload_url: ${{ github.event.release.upload_url }}
+    #     asset_path: ${{github.workspace}}/woolab-ic-dic.zip
+    #     asset_name: woolab-ic-dic.zip
+    #     asset_content_type: application/zip
