--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -23,20 +23,20 @@ jobs:
           php_extensions: json
           version: 2
           dev: no
-      - run: composer global config --no-plugins allow-plugins.wpify/scoper true
-      - run: composer global require wpify/scoper
+      # - run: composer global config --no-plugins allow-plugins.wpify/scoper true
+      # - run: composer global require wpify/scoper
       - run: sudo chown -R $USER:$USER $GITHUB_WORKSPACE/vendor
       - run: composer install --no-dev --optimize-autoloader
 
       - name: Archive plugin artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: woolab-ic-dic-${{ github.ref_name }}
-          path: |
-            ${{ github.workspace }}
-            !git/**/*
-            !github/**/*
-            !tests/**/*
-            !DOCKER_ENV
-            !docker_tag
-            !output.log
+          # path: |
+          #   ${{ github.workspace }}
+          #   !git/**/*
+          #   !github/**/*
+          #   !tests/**/*
+          #   !DOCKER_ENV
+          #   !docker_tag
+          #   !output.log
