--- a/.github/workflows/create-build.yml
+++ b/.github/workflows/create-build.yml
@@ -23,8 +23,8 @@ jobs:
           php_extensions: json
           version: 2
           dev: no
-      # - run: composer global config --no-plugins allow-plugins.wpify/scoper true
-      # - run: composer global require wpify/scoper
+      - run: composer global config --no-plugins allow-plugins.wpify/scoper true
+      - run: composer global require wpify/scoper
       - run: sudo chown -R $USER:$USER $GITHUB_WORKSPACE/vendor
       - run: composer install --no-dev --optimize-autoloader
 
